--- a/index.html
+++ b/index.html
@@ -4,7 +4,29 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="styles.css" />
 		<title>Unit Converter</title>
 	</head>
-	<body></body>
+	<body>
+		<section class="hero">
+			<h1>Metric/Imperial Unit Conversion</h1>
+			<input type="text" />
+			<button id="convert-btn">convert</button>
+		</section>
+
+		<section class="results">
+			<div class="result-cards">
+				<h2>Length (Meter/Feet)</h2>
+				<p>20 meters =</p>
+			</div>
+			<div class="result-cards">
+				<h2>Volume (Liters/Gallons)</h2>
+				<p>20 liters =</p>
+			</div>
+			<div class="result-cards">
+				<h2>Mass (Kilograms/Pounds)</h2>
+				<p>20 kilos =</p>
+			</div>
+		</section>
+	</body>
 </html>
