--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
 	<body>
 		<section class="hero">
 			<h1>Metric/Imperial Unit Conversion</h1>
-			<input type="text" />
+			<input type="text" id="input-el" />
 			<button id="convert-btn">convert</button>
 		</section>
 
 		<section class="results">
 			<div class="result-cards">
 				<h2>Length (Meter/Feet)</h2>
-				<p>20 meters =</p>
+				<p id="meter-feet-el"></p>
 			</div>
 			<div class="result-cards">
 				<h2>Volume (Liters/Gallons)</h2>
-				<p>20 liters =</p>
+				<p id="liter-gallon-el"></p>
 			</div>
 			<div class="result-cards">
 				<h2>Mass (Kilograms/Pounds)</h2>
-				<p>20 kilos =</p>
+				<p id="kilo-pound-el"></p>
 			</div>
 		</section>
+		<script src="index.js"></script>
 	</body>
 </html>
